--- a/characters/gus-fring.html
+++ b/characters/gus-fring.html
@@ -36,7 +36,9 @@
     <img src="../assets/imgs/gus-fring.jpg" alt="">
     <h1>GUS FRING</h1>
     <hr>
-    <p>What kind of man talks to the DEA? No man. No man at all. A crippled little rata. What a reputation to leave behind. Is that how you want to be remembered? Last chance to look at me, Hector. Can I help you sir? What can I do for you? I'm... sorry, I'm not following. I... think that you're confusing me for someone else. Sir, if you have a complaint, I suggest you submit it through our email system. I will be happy to refer you to our website.</p>
+    <p>What kind of man talks to the DEA? No man. No man at all. A crippled little rata. What a reputation to leave behind. Is that how you want to be remembered? Last chance to look at me, Hector.</p>
+    <hr>
+    <p>Can I help you sir? What can I do for you? I'm... sorry, I'm not following. I... think that you're confusing me for someone else. Sir, if you have a complaint, I suggest you submit it through our email system. I will be happy to refer you to our website.</p>
     <hr>
     <p>What does a man do, Walter? A man provides for his family. When you have children, you always have family. They will always be your priority, your responsibility, and a man - a man provides. And he does it even when he's not appreciated or respected or even loved. He simply bears up, and he does it because he's a man.</p>
     <hr>
