--- a/characters.html
+++ b/characters.html
@@ -11,7 +11,7 @@
   <a href="index.html" class="btn btn-lg btn-block">BACK TO HOME PAGE</a>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/walter-white.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column d-flex flex-column">
@@ -21,7 +21,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/jesse-pinkman.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -31,7 +31,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/skyler-white.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -41,7 +41,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/hank-schrader.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/saul-goodman.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/mike-ehrmantraut.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -73,7 +73,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/marie-schrader.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -83,7 +83,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/gus-fring.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/hector-salamanca.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -103,7 +103,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg mb-4 d-flex align-items-stretch">
+      <div class="col-sm-12 col-md-12 col-lg mb-4 d-flex align-items-stretch">
         <div class="card">
           <img src="assets/imgs/tuco-salamanca.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
