--- a/characters/hector-salamanca.html
+++ b/characters/hector-salamanca.html
@@ -5,30 +5,7 @@
   <title>Hector Salamanca</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-  <style type="text/css">
-    body {
-      background: #245038;
-      color: white;
-      font-size: 20px;
-      font-family: 'Montserrat', sans-serif;
-    }
-    .btn {
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-      img {
-        border: 2px solid white;
-        border-radius: 10%;
-        margin-bottom: 15px;
-        width: 500px;
-      }
-      .container {
-        text-align: center;
-      }
-      h1 {
-        font-weight: bold;
-      }
-  </style>
+  <link rel="stylesheet" href="../assets/css/character.css">
 </head>
 <body>
   <div class="container">
